--- a/CIANDTTest/Base.lproj/Main.storyboard
+++ b/CIANDTTest/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="49e-Tb-3d3">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -12,7 +12,7 @@
         <!--User Weather-->
         <scene sceneID="hNz-n2-bh7">
             <objects>
-                <viewController id="9pv-A4-QxB" userLabel="User Weather" customClass="UserWeatherViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="UserWeatherID" id="9pv-A4-QxB" userLabel="User Weather" customClass="UserWeatherViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Ia1-K6-d13"/>
                         <viewControllerLayoutGuide type="bottom" id="4ug-Mw-9AY"/>
@@ -101,7 +101,7 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="V07-ni-t8o">
-                        <barButtonItem key="rightBarButtonItem" title="Logout" id="jv3-OP-DRh">
+                        <barButtonItem key="rightBarButtonItem" image="profile" id="jv3-OP-DRh">
                             <connections>
                                 <action selector="touchLogoutButton:" destination="9pv-A4-QxB" id="DwU-4E-4RR"/>
                             </connections>
@@ -110,7 +110,6 @@
                     <connections>
                         <outlet property="activityIndicator" destination="0QD-Cr-7ji" id="kzr-9d-Nuj"/>
                         <outlet property="cityName" destination="SqM-dn-NDw" id="sP5-u4-XT1"/>
-                        <outlet property="facebookLogoutButton" destination="jv3-OP-DRh" id="Ttx-9X-WmH"/>
                         <outlet property="icon" destination="Bjg-DZ-iBK" id="ahY-Kf-yo0"/>
                         <outlet property="maxtemp" destination="YrB-4H-zl9" id="N7L-dL-HhL"/>
                         <outlet property="mintemp" destination="3wG-Md-mRe" id="DAB-KY-nvG"/>
@@ -125,7 +124,7 @@
         <!--City Weather-->
         <scene sceneID="wg7-f3-ORb">
             <objects>
-                <viewController id="8rJ-Kc-sve" userLabel="City Weather" customClass="CityWeatherViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="CityWeatherId" id="8rJ-Kc-sve" userLabel="City Weather" customClass="CityWeatherViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="L7p-HK-0SC"/>
                         <viewControllerLayoutGuide type="bottom" id="Djb-ko-YwX"/>
@@ -259,7 +258,7 @@
         <!--Here-->
         <scene sceneID="7Gf-Xu-QWH">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="R4p-aA-0QJ" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="LocationNavigationId" automaticallyAdjustsScrollViewInsets="NO" id="R4p-aA-0QJ" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Here" image="icon_here" id="acW-dT-cKf"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="9he-uu-Koo">
@@ -278,7 +277,7 @@
         <!--London-->
         <scene sceneID="DVO-fB-Lob">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="CAq-ek-LFg" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="NavigationCityWeatherID" automaticallyAdjustsScrollViewInsets="NO" id="CAq-ek-LFg" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="London" image="icon_london" id="cPa-gy-q4n">
                         <offsetWrapper key="titlePositionAdjustment" horizontal="0.0" vertical="0.0"/>
                     </tabBarItem>
@@ -301,5 +300,6 @@
         <image name="icon_here" width="30" height="30"/>
         <image name="icon_london" width="30" height="30"/>
         <image name="london" width="1250" height="242"/>
+        <image name="profile" width="30" height="30"/>
     </resources>
 </document>
